# llm_chess

./: .env.sample  .gitignore  AGENTS.md  LICENSE  LLM Chess Meeting Notes copy.md  LLM Chess Rebuttals.md  README.md  analyse_game.py  analyse_output.py  analyze_chess_json.py  batch_analyze_jsons.py  calc_elos.py  calc_elos_pipeline.py  custom_agents.py  do_call.py  get_run_metadata.py  llm_chess.py  llm_chess_tool_call.py  pyproject.toml  pytest.ini  rename.py  requirements.txt  run_experiments.py  run_multiple_games.py  sample_output.txt  skills-lock.json  sunfish.py  termination_reasons.py  test_anthropic_thinking.py  test_smth.py  tests.py  utils.py
.github/: PUBLISHING.md
_logs/: 19:32_06.10.2024.json  2024.10.07_18:18.json  2024.10.07_18:21.json  2024.10.07_18:31.json  2024.10.07_18:39.json  2024.10.07_18:42.json  2024.10.07_18:48.json  2024.10.07_19:01.json  2024.10.08_11:10.json  2024.10.15_15:43.json  2024.10.22_23:18_lama-3.1-nemotron-70b-instruct-hf.json  2024.10.22_23:18_lama-3.1-nemotron-70b-instruct-hf.md  2024.11.29_13:21_qwq-32b-preview@q4_k_m.json  Actions.md  README.md  aggregate_models_to_csv.py  aggregate_results.csv  aggregate_to_csv.py  take_out_boards_from_console_output.py
ablations/: always_board_state.json  always_legal_moves.json  ascii.json  dragon_default.json  fen.json  get_ablation_results.py  no_legal_moves_fen.json  only_make_move.json  only_make_move_dragon.json  only_make_move_previous_moves.json  previous_moves.json  random_vs_dragon.json  realistic.json  unicode_w_pgn.json  white.json
analysis/: chrome-devtools-mcp2cli-skill-report.md  confidence.ipynb  current_lb_extended_table.md  pending_models_evaluation.ipynb  timeline.ipynb
data/: confidence.ipynb  elo_refined.csv  epoch_eci_apr_2026.csv  get_refined_csv.py  models_metadata.csv  pending_models.py  timeline.ipynb
data_processing/: __init__.py  aggr.csv  aggr_logs_to_plain_csv.py  aggr_to_refined.py  aggregate.csv  aggregate_analysis_metrics.py  aggregate_logs_to_csv.py  aggregate_logs_to_csv_for_paper.py  aggregate_models.csv  analyse_game.py  compare_elo_refined.py  cost_vs_verbosity.ipynb  dragon_refined.csv  elo.ipynb  elo_graph_for_paper.py  elo_refined.csv  generate_ablation_win_table.py  generate_aggregate_table.py  generate_comparison_table.py  generate_phase_tables.py  generate_random_vs_black_table.py  generate_winpct_level_table.py  get_refined_csv.py  get_refined_csv_for_paper.py  get_refined_dragon_vs_llm.py  get_refined_elo.py  get_refined_random_vs_llm.py  models_metadata.csv  parse_game_logs.py  phase_tables.txt  plain.csv  plot_avg_win_pct.py  prices.csv  refined.csv  rename.py  results_for_paper.py  validate.ipynb  win_rates.csv  winpct_levels.txt
docs/: LLM CHESS, Benchmarking Reasoning and Instruction-Following in LLMs through Chess - NeurIPS FoRLM 2025.md  data.js  index.html  md.js  moves.txt  notes.md  script.js  styles.css
leaderboard/: aggregate_results.csv  index.html
path=tests/: mock_openai_server.py
quantization_research/: Logs + Flash Attention.md  aggr.csv  aggregate_models.csv  aggregate_models.numbers  get_data.py  plain.csv  refined_quant.csv  refined_quant.numbers  (+1 more)
(+30846 files in other folders)
