[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-chess"
version = "0.0.0"
description = "LLM Chess benchmark: agentic chess games to evaluate reasoning and instruction following."
readme = "README.md"
requires-python = ">=3.10,<=3.14"
license = {file = "LICENSE"}
authors = [
  {name = "Maxim Saplin"}
]
keywords = ["llm", "chess", "benchmark", "ai", "reasoning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "ag2[openai,gemini,anthropic,mistral,cerebras,groq]==0.10.1",
  "cairosvg==2.7.1",
  "chess==1.11.2",
  "fastapi==0.115.11",
  "matplotlib==3.10.0",
  "moviepy==1.0.3",
  "pandas",
  "prettytable",
  "requests",
  "scipy",
  "tabulate",
  "uvicorn==0.34.0",
  "seaborn"
]

[project.urls]
Homepage = "https://github.com/maxim-saplin/llm_chess"
Repository = "https://github.com/maxim-saplin/llm_chess"
"Bug Tracker" = "https://github.com/maxim-saplin/llm_chess/issues"
Documentation = "https://github.com/maxim-saplin/llm_chess/blob/main/README.md"
Leaderboard = "https://maxim-saplin.github.io/llm_chess/"

[dependency-groups]
dev = [
  "ipykernel",
  "pytest",
  "pytest-xdist",
]

[project.scripts]
llm-chess = "llm_chess:run"
get-refined-csv = "data_processing.get_refined_csv:main"
aggregate-logs-csv = "data_processing.aggregate_logs_to_csv_for_paper:main"

[tool.setuptools]
py-modules = [
  "custom_agents",
  "do_call",
  "get_run_metadata",
  "llm_chess",
  "run_multiple_games",
  "utils",
]
packages = ["data_processing"]




